--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         
         <div class="about">
             <p>
-             If you've made it to this website you must know that I am Zachary Vandeputte. Let me introduce you to myself -
+             If you've made it to this website you must know that I am Zachary Vandeputte. Let me introduce myself -
             </p>
         </div>
 
