--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
        
         <div class="subabout2">
             <p>
-                I was first introduced to understanding politics through a philosophical lens during high school in home room with a teacher by the name of Mr. Woodhouse. He pushed me 
-                towards self-reflection and understand myself and the world around me. I've since used this in my studies to become a better student and well-rounded individual. 
-                As I continue to grow, my goal for this website is to provide anyone who happens upon it with an understanding of myself and where I've came from.
-
+                This website is dedicated to whatever career lay beyond the horizon of my future and I hope to continue to update and change this about section as my life changes.
+                Studying philosophy and political science have allowed me to learn about myself and the world around me, making me even more confident in my future - whatever that may be.
+                I hope to gain career experience working for a company that does meaningful work and recognizes my worth as a person and lifelong student, wishing to enrich my life and 
+                skill-set as I help enable said company accomplish its meaningful goal.
             </p>
 
         </div>
