--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
         <div class="subabout2">
             <p>
                 This website is dedicated to whatever career lay beyond the horizon of my future and I hope to continue to update and change this about section as my life changes. 
-                Studying philosophy and political science have allowed me to learn about myself and the world around me, making me even more confident in my future - whatever that may be.
-                I hope to gain career experience working for a company that does meaningful work and recognizes my worth as a person and lifelong student; I wish to enrich my life,
+                Studying philosophy and political science have allowed me to learn about myself and the world around me, making me even more confident in my future - whatever that may be. I hope to gain career experience 
+                working for a company that does meaningful work and recognizes my worth as a person and lifelong student; I wish to enrich my life,
                 skill-set, and understanding of both technical and soft skills as I help enable said company accomplish its meaningful goal.
             </p>
 
