--- a/about.html
+++ b/about.html
@@ -35,7 +35,10 @@
 
         <div class="subabout1">
             <p>
-                I am a soon to be 2022 graduate studying philosophy and political science at Indiana University - Bloomington.
+                
+                *As of today, August 26th 2022 I have now graduated from Indiana University with a B.A in Philosophy and Political Science and am now employed
+                by Charles Schwab, studying to become licensed as a stock broker :) *
+                <br/>
                 I first created this website while studying computer science with the aim of it to originally be a sort of storage facility for my projects.
                 Life had other plans as I struggled with a  diagnosis of epilepsy in my first-year spring semester. It was difficult to keep up with my peers while retaining
                 the enjoyment I originally found in computer programming. I've since decided that stuyding philosophy and political science have provided me with a deep sense
